--- a/scss/crt.scss
+++ b/scss/crt.scss
@@ -1,7 +1,7 @@
 /**
  *  Personal Site: My humble personal homepage, made with a tiny bit but not much care.
  *  <https://github.com/MattIPv4/Personal-Site/>
- *  Copyright (C) 2020 Matt Cowley (MattIPv4) (me@mattcowley.co.uk)
+ *  Copyright (C) 2021 Matt Cowley (MattIPv4) (me@mattcowley.co.uk)
  *
  *  This program is free software: you can redistribute it and/or modify
  *   it under the terms of the GNU General Public License as published
@@ -57,6 +57,10 @@ body {
       font-size: 4em;
       letter-spacing: .1em;
       text-shadow: 0 .1rem 1rem rgba(129, 243, 253, .75);
+
+      @media only screen and (max-width: 768px) {
+        font-size: 2.5em;
+      }
 
       &::selection,
       *::selection {
@@ -217,7 +221,7 @@ body {
     width: 100%;
 
     &::before {
-      animation: crt-bg 750ms infinite;
+      animation: crt-bg 900ms infinite;
       background: rgba(129, 243, 253, .65);
       content: "";
       display: block;
