--- a/scss/swift.scss
+++ b/scss/swift.scss
@@ -1,7 +1,7 @@
 /**
  *  Personal Site: My humble personal homepage, made with a tiny bit but not much care.
  *  <https://github.com/MattIPv4/Personal-Site/>
- *  Copyright (C) 2020 Matt Cowley (MattIPv4) (me@mattcowley.co.uk)
+ *  Copyright (C) 2021 Matt Cowley (MattIPv4) (me@mattcowley.co.uk)
  *
  *  This program is free software: you can redistribute it and/or modify
  *   it under the terms of the GNU General Public License as published
@@ -130,6 +130,12 @@ body {
       font-size: 1.5em;
       margin: 0;
 
+      &:not(:last-child) {
+        @media only screen and (max-width: 768px) {
+          margin: 0 0 .25em;
+        }
+      }
+
       a {
         b {
           &::before {
@@ -149,6 +155,10 @@ body {
 
         br {
           display: none;
+
+          @media only screen and (max-width: 768px) {
+            display: initial;
+          }
         }
 
         i {
